--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,3 +11,9 @@ body{
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
 }
+#canvas{
+    grid-column: 2;
+    grid-row: 2;
+    justify-self: center;
+    border: 1px solid black;
+}
