--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,7 @@ body{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
+    background: linear-gradient(to bottom, red, white, aqua);
 }
 #canvas{
     grid-column: 2;
