--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,11 +10,20 @@ body{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
-    background: linear-gradient(to bottom, red, white, aqua);
+    background: url("../img/background.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-#canvas{
+#gameContainer{
     grid-column: 2;
     grid-row: 2;
     justify-self: center;
     border: 1px solid black;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+#sword{
+    background: url("../img/sword.png");
+    width: 512px;
+    height: 512px;
+    background-size: cover;
 }
